[workspace]
resolver = "2"
members = ["cartridge_vrf"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]

# Compiler optimization when running test to prevent 'locals exceed maximum' error,
# where a function is using more that the maximum allowed local variables.
[profile.dev]
incremental = true
opt-level = 1

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false
incremental = false