[package]
name = "vrf_demo-rpc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
serde = { version = "1.0.195", features = ["serde_derive"] }
tokio = { version = "1.40", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
prost = "0.12.3"
stark-vrf = { git = "https://github.com/dojoengine/stark-vrf.git" }
num = "0.4.3"
clap = { version = "4.5.17", features = ["derive"] }


[build-dependencies]
prost-build = "0.12.3"
