[package]
name = "vrf-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vrf-server"
path = "src/main.rs"

[dependencies]
ark-ec = "0.4.2"
axum = "0.8.4"
serde = { version = "1.0.195", features = ["serde_derive"] }
tokio = { version = "1.40", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
prost = "0.12.3"
stark-vrf = { git = "https://github.com/dojoengine/stark-vrf.git" }
num = "0.4.3"
clap = { version = "4.5.17", features = ["derive"] }
starknet = "0.17.0"
starknet-crypto = "0.8.1"
cainome = { git = "https://github.com/cartridge-gg/cainome", rev = "7d60de1", features = [
    "abigen-rs",
] }
cainome-cairo-serde = { git = "https://github.com/cartridge-gg/cainome", rev = "7d60de1" }
serde_json = "1.0.145"
chrono = "0.4.42"
axum-test = "18.1.0"
anyhow = "1.0.100"
url = "2.5.7"


[dev-dependencies]
# katana
katana-runner = { git = "https://github.com/dojoengine/katana", rev = "eba352a" }
dojo-utils = { git = "https://github.com/dojoengine/dojo", rev = "6daa3d0" }
cairo-lang-starknet-classes = "2.11.2"

[build-dependencies]
prost-build = "0.12.3"
